ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-user/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-user
                port:
                  number: 8082
          - path: /service-suivi/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-suivi
                port:
                  number: 5000
          - path: /service-commande/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-commande
                port:
                  number: 5000
          - path: /service-optimization/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-optimization
                port:
                  number: 8000
          - path: /service-payement/(.+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ms-payement
                port:
                  number: 5000
